# skills-mcp

./: Dockerfile  LICENSE  PROGRESSIVE_DISCLOSURE_PLAN.md  README.md  apply-progressive-disclosure.sh  apply_progressive_disclosure.py  pyproject.toml  test_progressive_disclosure.py  verify_progressive_disclosure.py
.github/workflows/: tests.yml
src/progressive_skills_mcp/: _server.py  _version.py
src/skills_mcp/: _server.py
src/skillz/: _server.py  _version.py  progressive_disclosure.py
